--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,3 +8,4 @@ edition = "2021"
 [dependencies]
 serde_json = "1.0"
 reqwest = { version = "0.11", features = ["blocking", "json"] }
+crossbeam-channel = "0.5"
